versioned_docs/version-2026.1.1/professor/luis_henrique_manosso_von_mecheln.mdx


---
sidebar_label: 'Luis Henrique Manosso Von Mecheln'
---

import { Grid } from "@site/src/components/Grid";
import BrowserOnly from "@docusaurus/BrowserOnly";

export const data = {
  "title": "Luis Henrique Manosso Von Mecheln",
  "base": "",
  "weekClasses": [
    {
      "dayName": "Segunda-Feira",
      "dayClasses": []
    },
    {
      "dayName": "Terça-Feira",
      "dayClasses": [
        {
          "subject": "Projeto Integrador I - 2574",
          "size": 2,
          "teachers": [
            "Luis Henrique Manosso Von Mecheln"
          ],
          "classroom": "laboratorio_de_informatica_b_-_cr_toledo",
          "students": [
            "IIW2026B"
          ],
          "time": "07:30 - 08:20",
          "color": ""
        },
        {
          "subject": "Linguagens de apresentação e estruturação de conteúdos - 2557",
          "size": 2,
          "teachers": [
            "Luis Henrique Manosso Von Mecheln"
          ],
          "classroom": "laboratorio_de_informatica_b_-_cr_toledo",
          "students": [
            "IIW2026B"
          ],
          "time": "09:25 - 10:15",
          "color": ""
        }
      ]
    },
    {
      "dayName": "Quarta-Feira",
      "dayClasses": []
    },
    {
      "dayName": "Quinta-Feira",
      "dayClasses": [
        {
          "subject": "Desenvolvimento WEB Orientado a Objetos - 2538",
          "size": 2,
          "teachers": [
            "Luis Henrique Manosso Von Mecheln"
          ],
          "classroom": "laboratorio_de_informatica_b_-_cr_toledo",
          "students": [
            "IIW2025B"
          ],
          "time": "07:30 - 08:20",
          "color": ""
        },
        {
          "subject": "Linguagens de apresentação e estruturação de conteúdos - 2557",
          "size": 2,
          "teachers": [
            "Luis Henrique Manosso Von Mecheln"
          ],
          "classroom": "laboratorio_de_informatica_b_-_cr_toledo",
          "students": [
            "IIW2026B"
          ],
          "time": "10:15 - 11:05",
          "color": ""
        }
      ]
    },
    {
      "dayName": "Sexta-Feira",
      "dayClasses": []
    }
  ],
  "time": [
    {
      "time": "07:30 - 08:20",
      "size": 50
    },
    {
      "time": "08:20 - 09:10",
      "size": 50
    },
    {
      "time": "09:25 - 10:15",
      "size": 50
    },
    {
      "time": "10:15 - 11:05",
      "size": 50
    },
    {
      "time": "11:05 - 11:55",
      "size": 50
    },
    {
      "time": "13:10 - 14:00",
      "size": 50
    },
    {
      "time": "14:00 - 14:50",
      "size": 50
    },
    {
      "time": "15:05 - 15:55",
      "size": 50
    },
    {
      "time": "15:55 - 16:45",
      "size": 50
    },
    {
      "time": "16:45 - 17:35",
      "size": 50
    },
    {
      "time": "19:00 - 19:50",
      "size": 50
    },
    {
      "time": "19:50 - 20:40",
      "size": 50
    },
    {
      "time": "21:00 - 21:50",
      "size": 50
    },
    {
      "time": "21:50 - 22:40",
      "size": 50
    }
  ]
}

# Luis Henrique Manosso Von Mecheln

<div>
  {
    <BrowserOnly>
      {() => (
        <Grid
          title={data.title}
          weekClasses={data.weekClasses}
          time={data.time}
        />
      )}
    </BrowserOnly>
  }
</div>

